external/qt-everywhere-opensource-src-5.9.1/qtscxml/tests/auto/parser/data/invalidRoot2.scxml.errors
:/tst_parser/data/invalidRoot2.scxml:9:53: error: Unknown element scxmn
:/tst_parser/data/invalidRoot2.scxml:10:38: error: Error parsing SCXML file: Expected '>' or '/', but got '[a-zA-Z]'.
