external/qt-everywhere-opensource-src-5.9.1/qtscxml/tests/auto/parser/data/invalidRoot2.scxml
<?xml version="1.0" encoding="UTF-8"?>
<scxml
    xmlns="http://www.w3.org/2005/07/scxml"
    version="1.0"
>
    <state id="somewhere">
        <invoke type="http://www.w3.org/TR/scxml/">
            <content>
                <scxmn name="anywhere" version="1.0">
                    <state id="there"datamodel
                        <transition event="goHere" target="here"/>
                    </state>
                </scxml>
            </content>
        </invoke>
    </state>
</scxml>
